# solar-racing-assignment

./: .gitignore  CMakeLists.txt  README.md  TODO.md  main.c
.docs/: software-engineer.md  techincal-manager.md
raylib/: clay_renderer_raylib.c
